--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,8 @@
 Redovisning kmom01
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+I den här kursen var det väldigt mycket nytt som jag aldrig jobbat med förut. Jag har aldrig jobbat med ramverk förut och allt känndes väldigt svårt då jag började. Att få igång labbmiljön var struligt för mig då jag hade det på min stationära först och därför hade jag en för gammal php version i min xampp vilket tog lite tid att lösa. På laptopen fick jag  b.la problem med att kunna ladda upp på github vilket jag nu löst och använder ssh nyckel för. Det slutade med att jag fick kolla igenom era videor igen för att göra om allt.  Jag hoppas att det även fungerar på stationära nu efter jag fått till det på laptopen.
+
+Jag känner att jag har mycket kvar att lära inom css då sidan inte alls gjorde som jag ville att den skulle göra då jag försökte styla den. Men jag tycker att jag fick till sidan så att den går använda iallafall.  Sidan känns långt ifrån klar då det är mer saker jag vill få till men nu då jag hamnat efter så måste jag jobba igenom det och jag nöjer mig med att det  fungerar men kommer framöver att fixa till det. Jag hade velat lagt mer tid på att styla sidan. Ett fel som förstör sidan lite som jag såg nu är att då jag använder edge på den så sticker flashbilden ut på högersidan. Sen så finns det endel små fel på den som jag får fixa i nästa kursmoment.
+
+Det  har varit mycket nytt under det här kursmomentet och i början var det svårt att få grepp om något men jag tycker jag fått grepp om en del iallafall. Jag har aldrig jobbat med varken git eller markdown så det var roligt att testa på. I design känns det som jag har mycket att lära inom med bl.a färgsättningar och hur man designar sidan för att göra den lätt att förstå.
