--- a/content/verktyg/.meta.md
+++ b/content/verktyg/.meta.md
@@ -4,8 +4,9 @@ views:
         region: flash
         template: anax/v2/image/default
         data:
-            src: "image/theme/tree.jpg?width=1100&height=150&crop-to-fit&area=0,0,30,0"
-
+            src: "image/camp_nou.jpg?width=1100&height=150&crop-to-fit&area=0,10,15,0"
+            alt: "Test"
+            
     breadcrumb:
         region: breadcrumb
         template: anax/v2/breadcrumb/default
