--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,14 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+Jag tycker det vertikala gridet känns lite hämmande att jobba med, men jag ser poängen med det då det blir mer ordning på sidan. Jag vill tex centrera texten på bl.a. texten längst ner i footern men den hamnar då inte direkt mot en kolumn. Likadant med det horisontella gridet så tycker jag det hämmar lite men jag känner själv att sidan känns mer strukturerad så jag antar väl att det bara är en vanesak att börja jobba med det. 
+
+Typsnitten valde jag genom att jag provade en del av dom typsnitten som följde med i det typografiska gridet och valde ut dom jag tyckte kändes bäst. Jag har aldrig jobbat så här och trodde inte det va så mycket i hur stor texten ska vara hur stor radhöjd man ska ha mm. Så det har varit väldigt mycket att ta in i det här kursmomentet och är nog rätt mycket jag kommer behöva repetera. Men sen samtidigt tror jag det är ett av dom kursmomenten jag lärt mig mest i då allt är helt nytt och då jag aldrig tänkt i dom banorna man fått göra nu.
+
+Att jobba med less tycker jag går bättre och bättre och jag har i det här kursmomentet utnyttjat less funktioner mer än i det tidigare. Med att bl.a. skriva ut formler för att räkna ut av stånd bredd osv. Jag tycker det känns mycket bättre att koda i less än att göra det direkt i css just p.ga att man kan göra formler och importera från olika moduler. Sen är det på många ställen där man skulle kunna utnyttja allt ännu mer. 
+
+Jag tror inte jag har behållit någon av dom modulerna jag skrivit i själv från kmom02 utan jag har duplicerat dom och gjort om dom. Dom ända nu som används i både kmom02 och kmom03 är dom färdiga jag importerat t.ex. den för den responsiva menyn.
+
+Responsiviteten på webbplatsen tycker jag att jag fått till bra och jag är relativt nöjd med den. Men sen är det alltid nått man vill göra bättre och jag skulle kunna sitta och fixa små saker länge. Det är en stor skillnad mot andra kurser där det känns som man har mer klara mål, det känns som man alltid ha saker man kan ändra här. Något jag inte riktigt förstod var min ”lineheight” i för meny knapparna i den responsiva delen på 1120px  
+`line-height: (unit(@magicNumber) / unit(@font-size)) + 1;` och varför jag vart tvungen att +1 där för att få den att hamna på gridet. Font-size är 1* @fontSizeBody
+
