--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -3,4 +3,12 @@
 Redovisning kmom10
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+I analysen valde jag att skriva om teknik handels sidor på nätet. Sidorna jag valde var komplett inet och netonnet. Jag försökte hitta likheter i färgval hur dom använder olika element och hur mycket dom framhäver olika saker genom sin stil. Samt så kollade jag hur dom strukturerat sidan och hur mycket dom väljer att använda bilder. Jag tycker inte det är lätt att analysera så här men är bra att lära sig. Jag har mycket att träna på för att bli duktig på det. 
+  
+På uppdrag valde jag att göra om webbplatsen från grunden istället för att kopiera den i från min redovisa sida. Jag valde det på grund av att jag ville rensa upp på kod och gå igenom allt igen. Det var ett bra val tycker jag då det kändes att jag behövde repetera en del. Loggan tog ett tag för mig att göra då jag försökte att använda massa olika sidor som skulle vara gratis men alla ville att man skulle betala i slutet. Det slutade med att jag googlade fram en bild som man fick använda och ändra i. Det ända jag efterredigerade i den bilden var att ändra färgerna till att passa min färg schema. Jag har olika flash bilder på alla dom olika huvudsidorna (hem om och blogg). I footern valde jag att ha en kolumn med info till olika sociala medier, länka till olika delar av sidan och dom olika validatorerna. Jag tycker det är svårt att fantisera ihop en text om saker så jag har inte fått till så mycket sådan text. Jag har endast använt Cimage för att hantera bilderna på sidan. 
+  
+Temat har jag skapat det mesta från grunden men har kopierat vissa delar från min redovisa sida. Färg schemat valde jag för att jag ville få den att förmedla ett lugn samt lite elegans. Jag valde mycket av det efter jag kollat på andra lokala fotostudior och annat. Typografin valde jag med samma åtanke mina val  på typsnitten hamnade på Tangerine för överskrifter och Lato till det övriga. Sidan har det horisontella och vertikala gridet installerat och det mesta ligger som det ska i det. Temat fungerar även bra resposivt och jag tycker den ser vettig ut i alla storlekar. Vid 750px och under så åker sidobaren från högersidan till underst på sidan och allt får full bredd. Som designelement har jag använt av lite punkter streck och en del gradients. Samt har jag provat satt min accent färg på några ställen för att dra åt sig uppmärksamheten och bryta lite på mönstret. 
+ 
+Projektet tycker jag har gått relativt bra men det har varit tidskrävande för mig. Stora anledningen till att det varit så tidskrävande är för att jag hamnat efter och försöker jobba ikapp mig nu. Det jag haft lite svårt för under projektet är att beskära bilderna rätt i cimage då jag inte lyckas memorera vilken siffra i area som flyttar mig var. Rapporterna tycker jag är svår att skriva då jag alltid haft svårt att analysera det andra har gjort och att jag anser själv att jag inte har det bästa ögat för sånt. Annars tycker jag att det flutit på bra men tar ett tag innan man får det att se lika ut med hur man tänkt sig. Sen kommer jag på nya idéer jag vill testa hela tiden. Så det har varit väldigt mycket prova sig fram och göra om. 
+ 
+Den här kursen har varit den jag haft svårast för hittills. Men jag tycker ändå det varit en väldigt lärorikkurs då jag aldrig haft någon koll på sånt här innan. Jag tror kursen har varit väldigt nyttig och jag märker själv att man kollar på bilder och hemsidor lite annorlunda nu efteråt då man vet lite vad tanken bakom dom är. Jag är nöjd med kursen i det stora hela men inte riktigt nöjd med hur jag presterat då jag vet att jag kan göra det bättre om jag lägger mer tid i det. Till framtida kurser ska jag prova jobba så jag alltid ligger lite före  så att om det händer något oförutsett så ska jag inte behöva halka efter. Är tungt att jobba ikapp då man hamnar efter. Jag har läst ikapp dom tidigare kursmomenten men inte gjort uppgifterna i dom än mitt mål är att alla ska vara inne innan den här veckan är slut. Boken har varit bra men blivit lite rörigt för en då det är så mycket ny information därför kommer jag försöka läsa den något framöver då jag anser att det finns väldigt mycket mer att hämta ifrån den. Kursen har varit rolig men delvis tung, det jag tycker varit svårast motivations messigt och utförande är rapporterna. Jag skulle nog ge kursen en 7a. 
