--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,13 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+Rapporten tyckte jag gick ganska bra att skriva. Jag hade lite problem att få ut dom exakta färgerna från bracelonas sida då dom har gardienter över allt.
+
+Tanken bakom mina teman var mest att jag följde beskrivningarna. Jag höll minimalistiska färgetema enkelt och gjorde dett monokromatiskt färgschema med en komplimetär färg som accent färg. På mitt mörka färgschema använde jag också monokromatiskt färgschema där jag valde mörjare färger av blå/lila. Jag använder mig av en ljusgrå aktig färg för texten för att få bättre kontrast på texten. Acent färgen jag använde är en guldig färg jag hade kunnat använda den färgen på fler ställen men har valt att ha den på meny knappen samt reodivsa i navbaren. Min färgglada stil har lite mer skrikiga färger med rosa och blått. Accent färgen jag använde var en lite mörkre rosa. 
+
+Fontsen jag valde till mina teman var två stycken jag hittade på googlefonts. Till mina överskrifter har jag en seriff still som heter Noto Serif och till brödtexten har jag en san-seriffstil som heter Source Sans Pro. Jag valde dom då jag tycker båda är lättlästa och ser bra ut.
+
+Jag tjorva till det ganska mycket då jag satt då jag försökte fixa till typografin på sidan och aag förstod inte varför den inte ändrades. Så jag provade att skriva in variablerna på olika ställen för att se om dom vart överskriva någonstans, sedan sökte jag igenom alla filer för att se om det kunde  vara något. Det slutade med att jag komfram till att jag satt och kolla på sidan från min student sida på bth.se vilket och den hade jag inte uptaderat.
+
+Jag valde att använda samma filer för strukturen på mina teman och sen en egen fil för "inställningarna" till dom. Det gick väldigt smidigt att göra så för då man var klar med det första temat var det bara att göra filer med nya inställingar till dom andra två.
+Under det här kursmomentet har jag lärt mig mycket om färger och tanken bakom dom och hur man ska tänka då man väljer dom. Det är intresant men väldigt nytt.
