--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,14 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+På undersökningen om laddningstider på hemsidor valde jag att undersöka 3st hemsidor som säljer spel. Dom var Steam Blizzard och Ea, där det märktes väl att sidan som inte hade lika stora och mycket bilder fick en mycket bättre laddningstid än dom andra två. Cimage tycker jag gått rätt bra att använda den kan göra mycket av det enklare som jag brukar använda bildredigerings program för att göra. Text rotera bilden beskära den och olika filter, jag har provat lekt omkring lite i den på vad man kan göra manualen till programmet är lätt att följa. Det programmet jag brukar använda är Photoshop jag kan göra enklare saker i det men vill bli bättre på att redigera bilder i det. Desinax figure delen var för mig lite tjorvigare men jag fick till det efter ett tag. Det jag hade lite problem men var den responsiva delen ifrån texten då jag hade stressläst mig igenom för fort.
+Jag trodde att bilderna skulle hålla den bredd man skriver till dom tex w33 så ska den hålla 33%.
+
+Vilket resulterade i en hel del felsökande då jag inte trodde jag fick till den modulen som den skulle. Efter jag läst igenom dokumentet igen förstod jag vad den verkligen gjorde och det var att ta bort float på bilden då den går under en viss width vilket gör att den hamnar på en egen rad utan text runt sig. Angående bilder på webben har jag fått uppfattningen är att man ska använda sig av en så lågupplösning som det går samtidigt som man ska få bilden att se bra ut, samt att för ikoner och sånt är det bra att samla alla i samma bild och sedan ta bitar ur den bilden. PNG är bättre för grafiska objekt och jpg för fotografier och bilder med mer detaljer. 
+Jag valde att lägga flashbilder till varje blogginlägg som matchar årstiden det är på inlägget.
+
+Jag har ägnat lite tid till att styla blogginläggen jag la skugga runt vilket blir mörkare då man hovrar över det samt så lade jag till bakgrundsfärg på captionen till varje bild och gjorde så det sitter ihop med bilden. Caption delen har en opacitet på 0.3 och den hår upp till 1 då man hovrar över bilden.
+Jag kan spendera mycket mer tid på stylingen då det känn som man alltid ser små saker man vill förbättra men jag får nöja mig som det är och jag är relativt nöjd med hur det vart.
+
+Det här kursmomentet har det inte varit jättemycket styling i utan mer att hantera bilderna och beskära veta vilken typ av bild man ska använda. Så det jag lärt mig mest av är bildhanteringen i cimage.
+
