--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -3,4 +3,15 @@
 Redovisning kmom06
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Jag tycker det kändes bra att tänka i designprinciper även fast det inte är något jag tänkt på innan så kommer det mycket naturligt. Designelementen tycker jag gått bra men sidan skulle behöva lite mera för att jag ska tycka den ska se helt färdig ut.
+
+Jag tycker hemsidor i allmenhet jag har kollat på i mina rapporter innehåller väldigt mycket bilder och alla hemsidorna jag var in och analyserade var huvudelen bilder.
+
+Det har gått bra för mig att jobba med desigelement även fast jag inte gjort några stora ändringar på min sida. Jag har gjort större borders under mina rubriker ändrat bordern mellan headern och content sidan från solid till dashed. Sen skrev jag lite om dom designelementen jag haft sedan innan tex skuggorna runt mina bilder från kursoment 5.
+Temat för designprinciperna var lite svårare att komma igång med då jag inte ville göra om det på hela sidan så föll valet först på att jag gjorde det på en helt fristående sida som jag la i kmom06 mappen. Men jag kände då att jag nästan var klar att jag ville implementera den på en undersida på min redovisnings sida den ligger nu under design (länk finns i rapporten). Mina teman är likadana förutom att temat för designprinciper innehåller modulen som stylar sidan där jag gjorde designprinciper. Går man in på den sidan med fel tema aktiverat får man medelandet att man måste byta stil.
+
+Min uppfattning av "the final touch" är i stortsätt det sista som saknas för att hemsidan ska kännas hel. Det kan vara svårt att hitta riktigt det som saknas ibland och jag anser själv att min hemsida saknar det lilla extra för att den ska kännas färdig.
+
+Det jag lärt mig mest av det här kursmomentet är vad man ska tänka på kring designprinciper. Samt lite om hur man kan använda olika designelement. 
+Jag tycker jag fått bättre koll på hur man ska tänka då man designar hemsidor fast jag är inte där jag vill vara än.
+
